Version 3.0-5

 o Minor bug in handling class=="array" in the Effect() method.
 
 o Fixed bug when the name of the data frame is the name of function like "sort" in mixed-effects models with lme4 (problem originally reported by Saudi Sadiq).
 
 o Fixed bug in predictor-name matching that could occur in names with periods (reported by Trevor Avery).
 
 o Fixed package imports to conform to new CRAN rules.
 
 o Added residuals.cex argument to plot.eff().
 
 o Changes to work with pbkrtest 0.4-4.

Version 3.0-4

 o New default of KR=FALSE because KR=TRUE can be very slow.

 o KR argument now works correctly with allEffects().

 o Mixed models with negative binomial did not work and now they do.

 o Added methods for ordinal mixed models using 'clmm2' for the ordinal package.

 o Moved pbkrtest to Suggests (wasn't done properly previously).

 o Tweak to handling key.args (suggestion of Michael Friendly).

 o Use non-robust loess smooth for partial residuals from non-Gaussian GLMs.

 o Rationalized type and rescale.axis arguments to plot.eff(); scale.axis argument is deprecated.

 o Added setStrip() and restoreStrip() to control colors of lattice strips and make beginning and ending conditioning lines clearer.
 
 o Added residuals.smooth.color argument to plot.eff().
 
 o Cleaned up sources to conform to CRAN requirements.

Version 3.0-3

 o Made key.args argument to plot.eff() and plot.effpoly() more flexible (suggestion of Ian Kyle).

 o Moved pbkrtest package to Suggests and adjusted code for mixed models accordingly, to accomodate Debian (request of Dirk Eddelbuettel).

 o Fixed \dont-test{} examples.

Version 3.0-2

 o plot.eff() honors rescale.axis=FALSE when plotting partial residuals (bug reported by Alexander Wietzke).

 o Effect.mer() can use KR coefficient covariances to construct CIs for effects in LMMs.

 o Modernized package dependencies/namespace.

Version 3.0-1
