@@ -1,6 +1,6 @@
 Package: effects
 Version: 3.0-5
-Date: 2015-12-13
+Date: 2016-01-07
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
